@@ -185,4 +185,21 @@
  		
 	</target>
 
+	<target name="dumpusers">
+	
+		<mkdir dir="dump"/>
+		<mkdir dir="dump/files"/>
+		<mkdir dir="dump/folders"/>
+		
+		<java classpathref="hibernate" classname="webctdbexport.jdbc.DumpUsers" fork="true">
+			<!-- <jvmarg value="-Djava.security.manager"/>
+			<jvmarg value="-Djava.security.policy=etc/security.policy"/> -->
+			<!-- example user -->
+			<arg value="etc/jdbc-local.properties"/>
+			<arg value="dump/folders"/>
+			<arg value="dump/files"/>
+		</java>
+ 		
+	</target>
+
 </project>
